--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,5 @@
-h1 {
-  color: red;
-}
+@import "normalize";
+@import "variables";
+@import "global";
+@import "visually-hidden";
+@import "fonts.scss";
