--- a/source/css/style.css
+++ b/source/css/style.css
@@ -307,6 +307,15 @@ template {
 [hidden] {
   display: none; }
 
+body {
+  min-width: 320px;
+  font-family: "PT Mono", "Calibri", sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000000;
+  background-color: #ffffff; }
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -321,5 +330,33 @@ input[type="radio"].visually-hidden {
           clip-path: inset(100%);
   clip: rect(0, 0, 0, 0);
   overflow: hidden; }
+
+@font-face {
+  font-family: "PT Mono", "Calibri", sans-serif;
+  src: url("../fonts/PTMono-Regular.woff2") format("woff2"), url("../fonts/PTMono-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap; }
+
+@font-face {
+  font-family: "Roboto", "Arial", sans-serif;
+  src: url("../fonts/Roboto-Medium.woff2") format("woff2"), url("../fonts/Roboto-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap; }
+
+@font-face {
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  src: url("../fonts/RobotoCondensed-Regular.woff2") format("woff2"), url("../fonts/RobotoCondensed-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap; }
+
+@font-face {
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  src: url("../fonts/RobotoCondensed-Bold.woff2") format("woff2"), url("../fonts/RobotoCondensed-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap; }
 
 /*# sourceMappingURL=style.css.map */
