--- a/source/css/style.css
+++ b/source/css/style.css
@@ -359,4 +359,14 @@ input[type="radio"].visually-hidden {
   font-style: normal;
   font-display: swap; }
 
+.page-header {
+  width: 100%;
+  min-height: 500px;
+  height: 100vh;
+  background-color: #1B2D37;
+  background-image: url("../img/background-header.jpg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
 /*# sourceMappingURL=style.css.map */
