--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,5 +2,6 @@
 @import "variables";
 @import "global";
 @import "visually-hidden";
-@import "fonts.scss";
+@import "fonts";
 @import "blocks/page-header";
+@import "blocks/logo";
