--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,10 +1,9 @@
 .page-header {
   width: 100%;
   min-height: 500px;
-  height: 100vh;
   background-color: #1B2D37;
   background-image: url("../img/background-header.jpg");
   background-position: center top;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% auto;
 }
