--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "PT Mono", "Calibri", sans-serif;
+    font-family: "PT Mono";
     src: url("../fonts/PTMono-Regular.woff2") format("woff2"), url("../fonts/PTMono-Regular.woff") format("woff");
     font-weight: 400;
     font-style: normal;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: "Roboto", "Arial", sans-serif;
+    font-family: "Roboto";
     src: url("../fonts/Roboto-Medium.woff2") format("woff2"), url("../fonts/Roboto-Medium.woff") format("woff");
     font-weight: 500;
     font-style: normal;
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-    font-family: "Roboto Condensed", "Arial", sans-serif;
+    font-family: "Roboto Condensed";
     src: url("../fonts/RobotoCondensed-Regular.woff2") format("woff2"), url("../fonts/RobotoCondensed-Regular.woff") format("woff");
     font-weight: 400;
     font-style: normal;
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-    font-family: "Roboto Condensed", "Arial", sans-serif;
+    font-family: "Roboto Condensed";
     src: url("../fonts/RobotoCondensed-Bold.woff2") format("woff2"), url("../fonts/RobotoCondensed-Bold.woff") format("woff");
     font-weight: 700;
     font-style: normal;
