--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
 @import "normalize";
-@import "variables";
 @import "global";
 @import "visually-hidden";
 @import "fonts";
 @import "blocks/page-header";
 @import "blocks/logo";
+@import "blocks/start-home";
