--- a/source/css/style.css
+++ b/source/css/style.css
@@ -363,15 +363,16 @@ input[type="radio"].visually-hidden {
   width: 100%;
   min-height: 500px;
   background-color: #1B2D37;
-  background-image: url("../img/photo-boards-desktop@1x.png"), url("../img/triangle.svg"), url("../img/background-desktop@1x.jpg");
-  background-position: 1038px 258px, 1051px 271px, center top;
+  background-image: url("../img/background-desktop@1x.jpg");
+  background-position: center top;
   background-repeat: no-repeat;
-  background-size: 705px 515px, 611px 487px, cover;
+  background-size: cover;
   padding-top: 33px;
-  padding-bottom: 274px; }
+  padding-bottom: 274px;
+  overflow-x: hidden; }
 
 .page-header__top {
-  max-width: 1431px;
+  max-width: 1460px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -380,8 +381,8 @@ input[type="radio"].visually-hidden {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 230px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
@@ -466,16 +467,65 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
   color: #FFFFFF; }
 
+@media (max-width: 1023px) {
+  .page-header {
+    padding-top: 20px;
+    min-width: 750px;
+    padding-bottom: 163px; }
+  .page-header__email {
+    font-size: 0;
+    padding-left: 60px; }
+    .page-header__email::before {
+      content: "";
+      width: 26.33px;
+      height: 18.67px;
+      top: -2px; }
+  .page-header__top {
+    margin-bottom: 117px; }
+  .page-header__phone {
+    font-size: 0;
+    margin: 0;
+    padding-left: 24px; }
+    .page-header__phone::before {
+      content: "";
+      width: 24px;
+      height: 24px;
+      top: -5px; }
+  .page-header__link {
+    display: none; }
+  .page-header__btn {
+    width: 379px;
+    margin-left: 45px; } }
+
 .logo img {
   display: block; }
 
 .start-home {
   position: relative;
-  max-width: 1411px;
+  max-width: 1460px;
+  padding-left: 25px;
+  padding-right: 25px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0 auto; }
+  .start-home b {
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 16px;
+    opacity: 0.5;
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    position: absolute;
+    bottom: -193px;
+    left: 6px;
+    font-weight: normal; }
 
 .start-home__message {
-  max-width: 720px; }
+  position: relative;
+  z-index: 1;
+  max-width: 55%; }
 
 .start-home__title {
   font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -493,7 +543,6 @@ input[type="radio"].visually-hidden {
 
 .start-home__subtitle {
   position: relative;
-  width: 620px;
   font-weight: normal;
   font-size: 22px;
   line-height: 34px;
@@ -509,5 +558,61 @@ input[type="radio"].visually-hidden {
     left: 0;
     top: 17px;
     background-color: #ffffff; }
+
+.start-home__img {
+  position: absolute;
+  top: -57px;
+  right: -53px; }
+  .start-home__img::before {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    width: 611px;
+    height: 487px;
+    background-image: url(../img/triangle.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; }
+  .start-home__img img {
+    display: block; }
+
+@media (max-width: 1023px) {
+  .start-home {
+    padding-left: 94px; }
+    .start-home b {
+      display: none; }
+  .start-home__message {
+    max-width: 60%; }
+  .start-home__title {
+    font-size: 60px;
+    line-height: 70px;
+    letter-spacing: 0.07em;
+    margin-bottom: 29px; }
+  .start-home__subtitle {
+    font-size: 18px;
+    line-height: 156.8%;
+    padding-left: 45px;
+    margin-bottom: 54px; }
+    .start-home__subtitle::before {
+      content: "";
+      width: 33px;
+      height: 2px;
+      left: -3px;
+      top: 16px; }
+  .start-home__img {
+    top: -76px;
+    right: -2px; }
+    .start-home__img::before {
+      content: "";
+      position: absolute;
+      top: -113px;
+      left: -70px;
+      width: 330px;
+      height: 466px;
+      background-image: url(../img/triangle-tablet.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover; } }
 
 /*# sourceMappingURL=style.css.map */
