--- a/source/sass/blocks/start-home.scss
+++ b/source/sass/blocks/start-home.scss
@@ -1,11 +1,29 @@
 .start-home {
   position: relative;
-  max-width: 1411px;
+  max-width: 1460px;
+  padding-left: 25px;
+  padding-right: 25px;
+  box-sizing: border-box;
   margin: 0 auto;
+
+  & b {
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 16px;
+    opacity: 0.5;
+    transform: rotate(-90deg);
+    transform-origin: left;
+    position: absolute;
+    bottom: -193px;
+    left: 6px;
+    font-weight: normal;
+  }
 }
 
 .start-home__message {
-  max-width: 720px;
+  position: relative;
+  z-index: 1;
+  max-width: 55%;
 }
 
 .start-home__title {
@@ -24,7 +42,6 @@
 
 .start-home__subtitle {
   position: relative;
-  width: 620px;
   font-weight: normal;
   font-size: 22px;
   line-height: 34px;
@@ -41,5 +58,84 @@
     left: 0;
     top: 17px;
     background-color: #ffffff;
+  }
+}
+
+.start-home__img {
+  position: absolute;
+  top: -57px;
+  right: -53px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    width: 611px;
+    height: 487px;
+    background-image: url(../img/triangle.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+
+  & img {
+    display: block;
+  }
+}
+
+@media(max-width: 1023px) {
+
+  .start-home {
+    padding-left: 94px;
+
+    & b {
+      display: none;
+    }
+  }
+
+  .start-home__message {
+    max-width: 60%;
+  }
+
+  .start-home__title {
+    font-size: 60px;
+    line-height: 70px;
+    letter-spacing: 0.07em;
+    margin-bottom: 29px;
+  }
+
+  .start-home__subtitle {
+    font-size: 18px;
+    line-height: 156.8%;
+    padding-left: 45px;
+    margin-bottom: 54px;
+
+    &::before {
+      content: "";
+      width: 33px;
+      height: 2px;
+      left: -3px;
+      top: 16px;
+    }
+  }
+
+  .start-home__img {
+    top: -76px;
+    right: -2px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -113px;
+      left: -70px;
+      width: 330px;
+      height: 466px;
+      background-image: url(../img/triangle-tablet.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
   }
 }
