--- a/source/sass/blocks/start-home.scss
+++ b/source/sass/blocks/start-home.scss
@@ -139,3 +139,39 @@
     }
   }
 }
+
+@media(max-width: 767px) {
+  .start-home {
+    width: 277px;
+    padding-left: 21px;
+    padding-right: 0;
+    margin: 0;
+  }
+
+  .start-home__title {
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.07em;
+    margin-bottom: 27px;
+  }
+
+  .start-home__subtitle {
+    width: 221px;
+    font-size: 16px;
+    line-height: 156.8%;
+    margin-bottom: 42px;
+  }
+
+  .start-home__img {
+    top: -194px;
+    right: -42px;
+
+    &::before {
+      content: "";
+      top: -100px;
+      left: 133px;
+      width: 300px;
+      height: 444px;
+    }
+  }
+}
