--- a/source/css/style.css
+++ b/source/css/style.css
@@ -497,6 +497,24 @@ input[type="radio"].visually-hidden {
     width: 379px;
     margin-left: 45px; } }
 
+@media (max-width: 767px) {
+  .page-header {
+    padding-top: 17px;
+    min-width: 320px;
+    padding-bottom: 163px;
+    padding-bottom: 70px; }
+  .page-header__top {
+    padding-left: 17px;
+    padding-right: 15px;
+    margin-bottom: 231px; }
+  .page-header__email {
+    padding-left: 50px; }
+  .page-header__btn {
+    width: 287px;
+    margin: 0;
+    padding: 0;
+    margin-left: -3px; } }
+
 .logo img {
   display: block; }
 
@@ -614,5 +632,31 @@ input[type="radio"].visually-hidden {
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover; } }
+
+@media (max-width: 767px) {
+  .start-home {
+    width: 277px;
+    padding-left: 21px;
+    padding-right: 0;
+    margin: 0; }
+  .start-home__title {
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.07em;
+    margin-bottom: 27px; }
+  .start-home__subtitle {
+    width: 221px;
+    font-size: 16px;
+    line-height: 156.8%;
+    margin-bottom: 42px; }
+  .start-home__img {
+    top: -194px;
+    right: -42px; }
+    .start-home__img::before {
+      content: "";
+      top: -100px;
+      left: 133px;
+      width: 300px;
+      height: 444px; } }
 
 /*# sourceMappingURL=style.css.map */
