--- a/source/css/style.css
+++ b/source/css/style.css
@@ -635,7 +635,7 @@ input[type="radio"].visually-hidden {
 
 @media (max-width: 767px) {
   .start-home {
-    width: 277px;
+    width: 87%;
     padding-left: 21px;
     padding-right: 0;
     margin: 0; }
