--- a/source/sass/blocks/start-home.scss
+++ b/source/sass/blocks/start-home.scss
@@ -142,7 +142,7 @@
 
 @media(max-width: 767px) {
   .start-home {
-    width: 277px;
+    width: 87%;
     padding-left: 21px;
     padding-right: 0;
     margin: 0;
