--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,8 @@
 @import "global";
 @import "visually-hidden";
 @import "fonts";
+@import "blocks/container";
 @import "blocks/page-header";
 @import "blocks/logo";
 @import "blocks/start-home";
+@import "blocks/advantages";
