--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,4 +6,5 @@
 @import "blocks/page-header";
 @import "blocks/logo";
 @import "blocks/start-home";
+@import "blocks/page-main";
 @import "blocks/advantages";
