--- a/source/css/style.css
+++ b/source/css/style.css
@@ -360,7 +360,8 @@ input[type="radio"].visually-hidden {
   font-display: swap; }
 
 .container {
-  max-width: 1170px;
+  max-width: 1120px;
+  padding: 0 25px 0 25px;
   margin: 0 auto; }
 
 .page-header {
@@ -662,5 +663,51 @@ input[type="radio"].visually-hidden {
       left: 133px;
       width: 300px;
       height: 444px; } }
+
+.page-main {
+  padding-top: 113px; }
+
+.advantages__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 628px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+  padding-bottom: 106px; }
+
+.advantages__item {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 1px solid #EBEBEB;
+  border-left: 3px solid #00B2FF;
+  width: calc(100% - 600px);
+  min-height: 299px;
+  padding-left: 41px;
+  padding-right: 43px;
+  padding-top: 40px;
+  padding-bottom: 49px;
+  margin-right: 30px;
+  margin-bottom: 30px; }
+  .advantages__item:nth-child(2n) {
+    margin-right: 0; }
+  .advantages__item h3 {
+    margin: 0;
+    padding-top: 13px;
+    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 34px;
+    color: #00B2FF; }
+  .advantages__item p {
+    margin: 0;
+    padding-top: 16px; }
 
 /*# sourceMappingURL=style.css.map */
