--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,5 +1,11 @@
 .container {
-  max-width: 1120px;
+  max-width: 1170px;
   padding: 0 25px 0 25px;
   margin: 0 auto;
+}
+@media(max-width: 767px) {
+  .container {
+    padding: 0 16px 0 14px;
+  }
+
 }
