--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,3 +1,15 @@
 .page-main {
   padding-top: 113px;
 }
+
+@media(max-width: 1023px) {
+  .page-main {
+    padding-top: 54px;
+  }
+}
+
+@media(max-width: 767px) {
+  .page-main {
+    padding-top: 37px;
+  }
+}
