--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -22,6 +22,7 @@
   padding-bottom: 49px;
   margin-right: 30px;
   margin-bottom: 30px;
+  background-color: #ffffff;
 
   &:nth-child(2n) {
     margin-right: 0;
@@ -91,7 +92,7 @@
     margin-right: 0;
     margin-bottom: 20px;
     min-height: 310px;
-    padding-left: 26px;
+    padding-left: 24px;
 
     &--detective {
       min-height: 232px;
@@ -103,7 +104,7 @@
     }
 
     &--hired {
-      padding-right: 14px;
+      padding-right: 10px;
     }
 
     & h3 {
