--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -32,6 +32,7 @@
   color: #ffffff;
   padding-left: 40px;
   box-sizing: border-box;
+  text-decoration: none;
 
   &::before {
     content: "";
@@ -57,6 +58,7 @@
   color: #ffffff;
   padding-left: 34px;
   box-sizing: border-box;
+  text-decoration: none;
 
   &::before {
     content: "";
@@ -87,6 +89,12 @@
   border-radius: 5px;
   text-decoration: none;
   text-transform: uppercase;
+
+  &:hover {
+    background-color: #00B2FF;
+    border-color: #00B2FF;
+    color: #ffffff;
+  }
 }
 
 .page-header__btn {
@@ -106,6 +114,13 @@
   letter-spacing: 0.05em;
   text-transform: uppercase;
   color: #FFFFFF;
+  cursor: pointer;
+
+  &:hover {
+    background-color: inherit;
+    border: 1px solid #ffffff;
+    color: #ffffff;
+  }
 }
 
 @media(max-width: 1023px) {
