--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,4 @@
 @import "blocks/advantages";
 @import "blocks/wrap-block.scss";
 @import "blocks/about-company.scss";
+@import "blocks/services.scss";
