--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,8 @@
 @import "blocks/start-home";
 @import "blocks/page-main";
 @import "blocks/advantages";
-@import "blocks/wrap-block.scss";
-@import "blocks/about-company.scss";
-@import "blocks/services.scss";
+@import "blocks/wrap-block";
+@import "blocks/about-company";
+@import "blocks/services";
+@import "blocks/feedback";
+@import "blocks/form";
