--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1264,4 +1264,104 @@ input[type="radio"].visually-hidden {
         content: "";
         left: 0; } }
 
+.page-footer {
+  background-color: #FAFAFA; }
+
+.page-footer__inner {
+  max-width: 1416px;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-top: 64px; }
+
+.page-footer__bottom {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.page-footer__social {
+  position: relative;
+  width: 216px; }
+  .page-footer__social p {
+    display: none; }
+  .page-footer__social img {
+    display: block;
+    margin-bottom: 54px; }
+
+.page-footer__nav {
+  width: 35.5%; }
+  .page-footer__nav p {
+    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 16px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 25px; }
+
+.page-footer__contacts h3 {
+  font-family: Roboto Condensed;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 16px;
+  color: #1B2D37;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 25px; }
+
+.page-footer__contacts p {
+  margin: 0;
+  font-size: 15px;
+  line-height: 25px;
+  color: #1B2D37;
+  opacity: 0.5; }
+
+.social-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 112px; }
+
+.footer-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 120px;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.footer-nav__item a {
+  font-size: 15px;
+  line-height: 25px;
+  text-decoration: none;
+  color: #1B2D37;
+  opacity: 0.5; }
+
 /*# sourceMappingURL=style.css.map */
