--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,6 @@
 @import "blocks/services";
 @import "blocks/feedback";
 @import "blocks/form";
+@import "blocks/page-footer";
+@import "blocks/social-list";
+@import "blocks/footer-nav";
