--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1265,7 +1265,15 @@ input[type="radio"].visually-hidden {
         left: 0; } }
 
 .page-footer {
+  position: relative;
   background-color: #FAFAFA; }
+  .page-footer::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(98, 105, 98, 0.2);
+    bottom: 52px; }
 
 .page-footer__inner {
   max-width: 1416px;
@@ -1290,9 +1298,18 @@ input[type="radio"].visually-hidden {
 
 .page-footer__social {
   position: relative;
-  width: 216px; }
+  width: 216px;
+  margin-right: 50px; }
   .page-footer__social p {
-    display: none; }
+    position: absolute;
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    width: 233px;
+    margin: 0;
+    bottom: -97px;
+    left: 223px; }
   .page-footer__social img {
     display: block;
     margin-bottom: 54px; }
@@ -1311,24 +1328,117 @@ input[type="radio"].visually-hidden {
     padding: 0;
     margin-bottom: 25px; }
 
-.page-footer__contacts h3 {
-  font-family: Roboto Condensed;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 16px;
-  color: #1B2D37;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  margin: 0;
-  margin-bottom: 25px; }
+.page-footer__contacts {
+  width: 333px; }
+  .page-footer__contacts h3 {
+    font-family: Roboto Condensed;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 16px;
+    color: #1B2D37;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    margin: 0;
+    margin-bottom: 25px; }
+  .page-footer__contacts p {
+    margin: 0;
+    font-size: 15px;
+    line-height: 25px;
+    color: #1B2D37;
+    opacity: 0.5; }
 
-.page-footer__contacts p {
-  margin: 0;
-  font-size: 15px;
-  line-height: 25px;
-  color: #1B2D37;
-  opacity: 0.5; }
+.page-footer__bottom {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 60px; }
+  .page-footer__bottom p {
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase; }
+  .page-footer__bottom p:first-of-type {
+    margin-right: 31.8%; }
+  .page-footer__bottom p:last-of-type {
+    margin-left: auto; }
+
+@media (max-width: 1023px) {
+  .page-footer::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(98, 105, 98, 0.2);
+    top: 97px; }
+  .page-footer::after {
+    content: "";
+    bottom: 58px; }
+  .page-footer__social {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 52px;
+    margin-right: 0;
+    margin-bottom: 65px; }
+    .page-footer__social p {
+      position: static;
+      padding-top: 7px;
+      padding-left: 14px; }
+    .page-footer__social img {
+      margin-bottom: 0; }
+  .page-footer__inner {
+    padding-top: 19px; }
+  .page-footer__nav {
+    width: 44%; }
+  .page-footer__contacts {
+    margin-right: 11px; }
+  .page-footer__bottom {
+    margin-top: 46px; }
+    .page-footer__bottom p:first-of-type {
+      display: none; } }
+
+@media (max-width: 767px) {
+  .page-footer__inner {
+    padding-top: 48px;
+    padding-left: 15px;
+    padding-right: 15px; }
+  .page-footer__social {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    min-height: 150px;
+    margin-right: 0;
+    margin-bottom: 65px; }
+    .page-footer__social p {
+      position: static;
+      padding-top: 7px;
+      padding-left: 14px;
+      margin-bottom: 32px; }
+    .page-footer__social img {
+      margin-bottom: 17px; }
+  .page-footer::before {
+    content: "";
+    top: 260px; } }
 
 .social-list {
   list-style: none;
@@ -1346,13 +1456,8 @@ input[type="radio"].visually-hidden {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 120px;
   list-style: none;
   margin: 0;
   padding: 0; }
@@ -1363,5 +1468,13 @@ input[type="radio"].visually-hidden {
   text-decoration: none;
   color: #1B2D37;
   opacity: 0.5; }
+
+.footer-nav__item:first-of-type {
+  margin-right: 74px; }
+
+.footer-nav__group {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
 
 /*# sourceMappingURL=style.css.map */
