--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,5 +1,15 @@
 .page-footer {
+  position: relative;
   background-color: #FAFAFA;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(98, 105, 98, 0.2);
+    bottom: 52px;
+  }
 }
 
 .page-footer__inner {
@@ -21,9 +31,18 @@
 .page-footer__social {
   position: relative;
   width: 216px;
+  margin-right: 50px;
 
   & p {
-    display: none;
+    position: absolute;
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    width: 233px;
+    margin: 0;
+    bottom: -97px;
+    left: 223px;
   }
 
   & img {
@@ -50,6 +69,8 @@
 }
 
 .page-footer__contacts {
+  width: 333px;
+
   & h3 {
     font-family: Roboto Condensed;
     font-style: normal;
@@ -69,6 +90,125 @@
     line-height: 25px;
     color: #1B2D37;
     opacity: 0.5;
+  }
+}
+
+.page-footer__bottom {
+  position: relative;
+  display: flex;
+  margin-top: 60px;
+
+  & p {
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
+
+  & p:first-of-type {
+    margin-right: 31.8%;
+  }
+
+  & p:last-of-type {
+    margin-left: auto;
+  }
+}
+
+
+@media(max-width: 1023px) {
+
+  .page-footer {
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background-color: rgba(98, 105, 98, 0.2);
+      top: 97px;
+    }
+
+    &::after {
+      content: "";
+      bottom: 58px;
+    }
+  }
+
+  .page-footer__social {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 52px;
+    margin-right: 0;
+    margin-bottom: 65px;
+
+    & p {
+      position: static;
+      padding-top: 7px;
+      padding-left: 14px;
+    }
+
+    & img {
+      margin-bottom: 0;
+    }
+  }
+
+  .page-footer__inner {
+    padding-top: 19px;
+  }
+
+  .page-footer__nav {
+    width: 44%;
+  }
+
+  .page-footer__contacts {
+    margin-right: 11px;
+  }
+
+  .page-footer__bottom {
+    margin-top: 46px;
+
+    & p:first-of-type {
+      display: none;
+    }
+  }
+}
+
+@media(max-width: 767px) {
+  .page-footer__inner {
+    padding-top: 48px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .page-footer__social {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    min-height: 150px;
+    margin-right: 0;
+    margin-bottom: 65px;
+
+    & p {
+      position: static;
+      padding-top: 7px;
+      padding-left: 14px;
+      margin-bottom: 32px;
+    }
+
+    & img {
+      margin-bottom: 17px;
+    }
+
+  }
+
+  .page-footer {
+    &::before {
+      content: "";
+      top: 260px;
+    }
   }
 }
 
