--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1266,7 +1266,8 @@ input[type="radio"].visually-hidden {
 
 .page-footer {
   position: relative;
-  background-color: #FAFAFA; }
+  background-color: #FAFAFA;
+  overflow-x: hidden; }
   .page-footer::after {
     content: "";
     position: absolute;
@@ -1428,7 +1429,7 @@ input[type="radio"].visually-hidden {
             justify-content: flex-start;
     min-height: 150px;
     margin-right: 0;
-    margin-bottom: 65px; }
+    margin-bottom: 93px; }
     .page-footer__social p {
       position: static;
       padding-top: 7px;
@@ -1436,9 +1437,44 @@ input[type="radio"].visually-hidden {
       margin-bottom: 32px; }
     .page-footer__social img {
       margin-bottom: 17px; }
-  .page-footer::before {
-    content: "";
-    top: 260px; } }
+  .page-footer {
+    padding-bottom: 14px; }
+    .page-footer::before {
+      content: "";
+      top: 260px; }
+    .page-footer::after {
+      content: "";
+      bottom: 123px; }
+  .page-footer__nav {
+    position: relative;
+    width: 100%; }
+    .page-footer__nav::before {
+      content: "";
+      position: absolute;
+      width: 1000px;
+      height: 1px;
+      background-color: rgba(98, 105, 98, 0.2);
+      top: 41px;
+      left: -32px; }
+  .page-footer__contacts {
+    margin-top: 30px;
+    margin-right: 0; }
+    .page-footer__contacts h3 {
+      margin-bottom: 30px; }
+    .page-footer__contacts p {
+      width: 272px; }
+  .page-footer__bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 45px; }
+    .page-footer__bottom p:last-of-type {
+      margin-left: 0;
+      margin-top: 7px; } }
 
 .social-list {
   list-style: none;
@@ -1451,6 +1487,9 @@ input[type="radio"].visually-hidden {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 112px; }
+
+.social-list__link:hover svg path {
+  fill: #00B2FF; }
 
 .footer-nav__list {
   display: -webkit-box;
@@ -1476,5 +1515,9 @@ input[type="radio"].visually-hidden {
   list-style: none;
   margin: 0;
   padding: 0; }
+
+@media (max-width: 767px) {
+  .footer-nav__list {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
