--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,6 +1,7 @@
 .page-footer {
   position: relative;
   background-color: #FAFAFA;
+  overflow-x: hidden;
 
   &::after {
     content: "";
@@ -189,7 +190,7 @@
     justify-content: flex-start;
     min-height: 150px;
     margin-right: 0;
-    margin-bottom: 65px;
+    margin-bottom: 93px;
 
     & p {
       position: static;
@@ -205,9 +206,53 @@
   }
 
   .page-footer {
+    padding-bottom: 14px;
     &::before {
       content: "";
       top: 260px;
+    }
+
+    &::after {
+      content: "";
+      bottom: 123px;
+    }
+  }
+  .page-footer__nav {
+    position: relative;
+    width: 100%;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 1000px;
+      height: 1px;
+      background-color: rgba(98, 105, 98, 0.2);
+      top: 41px;
+      left: -32px;
+    }
+  }
+
+  .page-footer__contacts {
+    margin-top: 30px;
+    margin-right: 0;
+
+    & h3 {
+      margin-bottom: 30px;
+    }
+
+    & p {
+      width: 272px;
+    }
+  }
+
+  .page-footer__bottom {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 45px;
+
+    & p:last-of-type {
+      margin-left: 0;
+      margin-top: 7px;
     }
   }
 }
